--- a/web_back/index.html
+++ b/web_back/index.html
@@ -59,8 +59,115 @@
     </div>
 
 
-    <script src="./js/jquery-1.12.4.min.js"></script>
+    <!-- 引入bs的模态框 -->
+    <!-- Modal -->
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                            aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="myModalLabel">提示框!!!</h4>
+                </div>
+                <div class="modal-body">
+                    登出失败
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+                    <button type="button" class="btn btn-primary">确认</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script>
+        var $level01 = $('.level01');
+        var $subli = $('.level02 li')
+        $level01.click(function() {
+            $level01.not($(this)).removeClass('active');
+            $(this).addClass('active');
+
+            if ($(this).next().hasClass('level02')) {
+                $(this).next().slideToggle();
+                $(this).find('b').toggleClass('rotate0');
+            } else {
+                $subli.removeClass('active');
+            }
+        })
+
+        $subli.click(function() {
+            $subli.not($(this)).removeClass('active');
+            $(this).addClass('active');
+
+            if (!$(this).parent().prev().hasClass('active')) {
+                $level01.removeClass('active');
+                $(this).parent().prev().addClass('active');
+            }
+        })
+
+        function resizeFrame() {
+            var frame_w = $('#main_body').outerWidth();
+            var frame_h = $('#main_body').outerHeight();
+            $('#main_frame').css({
+                'width': frame_w,
+                'height': frame_h
+            });
+        }
+
+        resizeFrame();
+
+        $(window).resize(function() {
+            resizeFrame();
+        })
+
+
+        function setMenu(m, n) {
+            $level01.eq(m).addClass('active').siblings().not('.level02').removeClass('active');
+            if (m != 1) {
+                $('.level02').slideUp();
+            } else {
+                $('.level02').slideDown();
+                $('.level02').children().eq(n).addClass('active').siblings().removeClass('active');
+            }
+        }
+    </script>
+
     <script src="./js/bootstrap/js/bootstrap.min.js"></script>
+    <script>
+        $(function() {
+            //给a注册单击事件,取消a的默认跳转
+            $('#btn_logout').on('click', function(e) {
+                e.preventDefault();
+                //发送ajax请求
+                $.ajax({
+                    type: 'post',
+                    url: 'https://autumnfish.cn/big/admin/logout',
+                    success: function(backData) {
+                        //console.log(backData);
+                        //判断backData.code是否为200
+                        if (backData.code == 200) {
+                            //登出成功,就跳转到登录页面
+                            window.location.href = './login.html';
+                        } else {
+                            //调用bs的js方法,弹出模态框
+                            $('#myModal').modal({
+                                keyboard: true
+                            })
+                        }
+                    }
+                });
+            });
+
+
+
+            /*
+            步骤:
+            1.给退出的a标签设置一个单击事件.
+                 注意:取消a标签的默认跳转
+            2.发送ajax请求,请求数据接口返回数据
+                如果成功就跳转到登录页login.html
+            */
+        });
     </script>
 
 </body>
