--- a/web_back/login.html
+++ b/web_back/login.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>大事件-后台登录页</title>
-    <link rel="stylesheet" type="text/css" href="css/reset.css">
-    <link rel="stylesheet" type="text/css" href="css/iconfont.css">
-    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet" type="text/css" href="./css/reset.css">
+    <link rel="stylesheet" type="text/css" href="./css/iconfont.css">
+    <link rel="stylesheet" type="text/css" href="./css/main.css">
     <!-- 导入bootstrap的css文件 -->
     <link rel="stylesheet" href="./js/bootstrap/css/bootstrap.min.css">
 </head>
@@ -30,9 +30,85 @@
                 <input type="submit" class="input_sub" value="登 录">
             </form>
         </div>
-
     </div>
 
+
+    <!-- bs模态框 -->
+    <!-- Button trigger modal -->
+    <!-- Modal -->
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="myModalLabel">温馨提示</h4>
+                </div>
+                <div class="modal-body">
+
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+                    <button type="button" class="btn btn-primary">确认</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+
+    <script src="./js/jquery-1.12.4.min.js"></script>
+    <script src="./js/bootstrap/js/bootstrap.min.js"></script>
+    <script>
+        $(function() {
+            $('.input_sub').on('click', function(e) {
+                e.preventDefault();
+
+                var userName = $('.input_txt').val().trim();
+                var password = $('.input_pass').val().trim();
+
+                if (userName == '' || password == '') {
+                    // alert('请输入账号，密码')
+                    $('.modal-body').text('请输入账号，密码')
+
+                    $('#myModal').modal({
+                        keyboard: true
+                    })
+                    return
+                }
+
+                $.ajax({
+                    type: 'post',
+                    url: ' https://autumnfish.cn/big/admin/login',
+                    data: {
+                        user_name: userName,
+                        password: password
+                    },
+                    success: function(backData) {
+                        console.log(backData);
+
+                        if (backData.code != 200) {
+
+                            $('.modal-body').text('账号或密码错误，请重新输入！！');
+
+                            $('#myModal').modal({
+
+                                keyboard: true
+                            })
+
+                        } else {
+
+                            window.location.href = './index.html'
+                        }
+
+                    }
+
+
+                })
+
+            })
+        })
+    </script>
 
 
 </body>
